[workspace]
members = ["./", "./webio-macros"]

[package]
name = "webio"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen-futures = "^0.4.30" 

[dependencies.wasm-bindgen-test]
version = "^0.3.30"
optional = true

[dependencies.futures]
version = "^0.3.21"
optional = true

[dependencies.js-sys]
version = "^0.3.57"
optional = true

[dependencies.wasm-bindgen]
version = "^0.2.80"
optional = true

[dependencies.web-sys]
version = "^0.3.57"
optional = true

[dependencies.webio-macros]
path = "./webio-macros"
optional = true

[dev-dependencies.wasm-bindgen-test]
version = "^0.3.30"

[dev-dependencies.web-sys]
version = "^0.3.57"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
]

[dev-dependencies.webio]
path = "."
features = ["time", "macros", "stream", "macros", "event"]

[features]
default = ["time", "macros"]
time = ["wasm-bindgen", "js-sys"]
macros = [
    "webio-macros",
    "wasm-bindgen",
    "wasm-bindgen-test",
    "js-sys",
    "web-sys/console",
]
stream = ["futures"]
event = [
    "wasm-bindgen",
    "web-sys/EventTarget",
    "web-sys/MouseEvent",
    "web-sys/KeyEvent",
    "web-sys/DragEvent",
    "web-sys/TouchEvent",
]
feature-doc-cfg = []
