[workspace]
members = ["./", "./webio-macros"]

[package]
name = "webio"
version = "0.1.0-alpha-1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen-futures = "^0.4.30" 
pin-project = "1.0.7"

[dependencies.wasm-bindgen-test]
version = "^0.3.30"
optional = true

[dependencies.futures]
version = "^0.3.21"
optional = true

[dependencies.js-sys]
version = "^0.3.57"
optional = true

[dependencies.wasm-bindgen]
version = "^0.2.80"
optional = true

[dependencies.web-sys]
version = "^0.3.57"
optional = true

[dependencies.webio-macros]
path = "./webio-macros"
optional = true

[dev-dependencies.wasm-bindgen-test]
version = "^0.3.30"

[dev-dependencies.web-sys]
version = "^0.3.57"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
]

[dev-dependencies.num]
version = "0.4.0"

[dev-dependencies.webio]
path = "."
features = ["time", "macros", "stream", "event"]

[features]
default = ["time", "macros", "event"]
time = ["wasm-bindgen", "js-sys"]
macros = [
    "webio-macros",
    "wasm-bindgen",
    "wasm-bindgen-test",
    "js-sys",
    "web-sys/console",
]
stream = ["futures"]
event = [
    "wasm-bindgen",
    "web-sys/EventTarget",
    "web-sys/MouseEvent",
    "web-sys/KeyboardEvent",
    "web-sys/DragEvent",
    "web-sys/FocusEvent",
    "web-sys/UiEvent",
]
feature-doc-cfg = []
