[workspace]
members = ["./"]

[package]
name = "isprime-wasm"
version = "0.1.0"
authors = ["brunoczim <brunoczim@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
num = "0.4.0"
wasm-bindgen = "0.2.80"
wasm-bindgen-futures = "^0.4.30" 
webio = { path = "../../", features = ["macros", "event"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dependencies.web-sys]
version = "^0.3.57"
features = [
    "EventTarget",
    "MouseEvent",
    "KeyboardEvent",
    "DragEvent",
    "FocusEvent",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
